# internal/server/http/server_docs.go
@@ -1,0 +1,27 @@
+//go:build docs
+
+package http
+
+// @title           Swagger Example API 1
+// @version         2.0
+// @description     This is a sample server celler server.
+// @description.markdown
+// @termsOfService  http://swagger.io/terms/
+
+//	@tag.name	server_desc
+//	@tag.description.markdown
+
+// @contact.name   API Support
+// @contact.url    http://www.swagger.io/support
+// @contact.email  support@swagger.io
+
+// @license.name  Apache 2.0
+// @license.url   http://www.apache.org/licenses/LICENSE-2.0.html
+
+// @host      localhost:8080
+// @BasePath  /api/v1
+
+// @securityDefinitions.basic  BasicAuth
+
+// @externalDocs.description  OpenAPI
+// @externalDocs.url          https://swagger.io/resources/open-api/
